--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -96,7 +96,7 @@ prob_dying_airqplus <-
     interval_age_pop = 5,
     population_midyear = airqplus_deaths_pop_multipleYear$mi,
     deaths = airqplus_deaths_pop_multipleYear$di,
-    fraction_of_year_lived = c(0.5,0.5)
+    fraction_of_year_lived = 0.5
   )
 ```
 
@@ -107,8 +107,7 @@ prob_dying_airqplus <-
 
 
 impact_annoyance_expDistribution_raw <- 
-  impact_morbidity_expDistribution_raw[[input_data_morbidities$year[i]]][[input_data_morbidities$crf_id[[i]]]] <-
-  bestcost::assess_impact_absolute_risk(
+  bestcost::assess_impact_absolute_risk (
     exp = c(57.5, 62.5, 67.5, 72.5, 77.5),
     pop_exp = c(387500, 286000, 191800, 72200, 7700), # Values as example provided by NIPH
     erf_shape = "quadratic",
