--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -64,19 +64,21 @@ if(!"bestcost" %in% installed.packages()[, "Package"]){
                            # "63-simplification-of-the-code"
                            # "Variable_names"
                            # "Small_code_changes"
-                           ref = "HEAD",
+                           ref = "absolute_risk",
                            force = TRUE)
 
 }
 
 # to quantify and monetize health impacts (own package)
-library(bestcost)
+# library(bestcost)
 # loads all functions in {bestcost}
-#devtools::load_all() 
+# devtools::load_all() 
+# Update R package documentation
+# devtools::document()
 ```
 
 ```{r load current version of bestcost from local source, include=FALSE}
-library(bestcost)
+
 detach("package:bestcost", unload = TRUE) # detach bestcost
 # Save current state of package as .zip file (e.g. to directly test changes in functions)
 devtools::build(binary = TRUE, path = "../testing/input/") 
@@ -108,7 +110,7 @@ prob_dying_airqplus <-
 
 impact_annoyance_expDistribution_raw <- 
   bestcost::assess_impact_absolute_risk (
-    exp = c(57.5, 62.5, 67.5, 72.5, 77.5),
+    exp = c(57.5, 62.5, 67.5, 72.5, 77.5),# Values as example provided by NIPH
     pop_exp = c(387500, 286000, 191800, 72200, 7700), # Values as example provided by NIPH
     erf_shape = "quadratic",
     erf_parameters = c(78.9270, -3.1162, 0.0342), 
@@ -127,7 +129,7 @@ impact_morbidity_expDistribution_raw <- list()
 for(i in 1:nrow(input_data_morbidities)){
   impact_morbidity_expDistribution_raw[[input_data_morbidities$year[i]]][[input_data_morbidities$crf_id[[i]]]] <-
   bestcost::assess_impact_single(
-    exp = c(53, 57.5, 62.5, 67.5, 72.5, 77.5),
+    exp = c(53, 57.5, 62.5, 67.5, 72.5, 77.5),# Values as example provided by NIPH
     prop_pop_exp = c(0.8187, 0.0743, 0.0549, 0.0368, 0.0138, 0.0015), # Values as example provided by NIPH
     cf = 53,    # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
     bhd = 5269.46,
