--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -236,8 +236,8 @@ impact_mortality_expDistribution_raw <- list()
 
 # Calculate mortality impacts using bestcost function
 
-for(i in 1:nrow(input_data_mortality)){  # Use this if you want to evaluate multiple crfs
-# for(i in 2){                           # Use this if you want to evaluate only one crfs
+#for(i in 1:nrow(input_data_mortality)){  # Use this if you want to evaluate multiple crfs
+for(i in 2){                           # Use this if you want to evaluate only one crfs
   impact_mortality_expDistribution_raw[[input_data_mortality$year[i]]][[input_data_mortality$crf_id[[i]]]] <-
   
     bestcost::assess_mortality_lifetable(
