--- a/r_package/testing/Performance/2023-12-13 Compare ARE method with new method/PER new method assess_mortality_lifetable().Rmd
+++ b/r_package/testing/Performance/2023-12-13 Compare ARE method with new method/PER new method assess_mortality_lifetable().Rmd
@@ -20,7 +20,7 @@ library(profvis)
 #     cutoff = input_data_mortality$cutoff[2],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
 #     crf = unlist(input_data_mortality[2,
 #                                       c("crf_mean", "crf_lowci", "crf_highci")]),
-#     crf_per = 10, 
+#     rr_increment = 10, 
 #     crf_rescale_method = "loglinear",
 #     first_age_pop = 0,
 #     last_age_pop = 99,
