--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -134,7 +134,7 @@ for(i in 1:nrow(input_data_morbidities)){
     cutoff = 53, # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
     bhd = 5269.46,
     crf = c(1.08, 1.07, 1.09),
-    crf_per = 10, 
+    rr_increment = 10, 
     crf_rescale_method = "loglinear", 
     info_pollutant = "noise", 
     info_outcome = "YLD")
@@ -157,7 +157,7 @@ for(i in 1:nrow(input_data_morbidities)){
     bhd = input_data_morbidities$bhd_absolute[i],
     crf = unlist(input_data_morbidities[i, 
                             c("crf_mean", "crf_lowci", "crf_highci")]) ,
-    crf_per = 10, 
+    rr_increment = 10, 
     crf_rescale_method = "loglinear", 
     info_pollutant = input_data_morbidities$pollutant[i], 
     info_outcome = input_data_morbidities$outcome_metric[i])
@@ -250,7 +250,7 @@ for(i in 2){                           # Use this if you want to evaluate only o
     cutoff = input_data_mortality$cutoff[i],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
     crf = unlist(input_data_mortality[i,
                                       c("crf_mean", "crf_lowci", "crf_highci")]),
-    crf_per = 10, 
+    rr_increment = 10, 
     crf_rescale_method = "loglinear",
     first_age_pop = 0,
     last_age_pop = 99,
@@ -289,7 +289,7 @@ for(i in 2){                           # Use this if you want to evaluate only o
     cutoff = input_data_mortality$cutoff[i],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
     crf = unlist(input_data_mortality[i,
                                       c("crf_mean", "crf_lowci", "crf_highci")]),
-    crf_per = 10, 
+    rr_increment = 10, 
     crf_rescale_method = "loglinear",
     first_age_pop = 0,
     last_age_pop = 99,
@@ -364,7 +364,7 @@ impact_mortality <-
     
   # Left join to add further information on crf
   dplyr::left_join(., crf_data, 
-                   by = c("info_pollutant" = "pollutant", "crf_id", "crf_per",
+                   by = c("info_pollutant" = "pollutant", "crf_id", "rr_increment",
                           paste0("crf_", c("mean", "lowci", "highci"))),
                    relationship = "many-to-one")%>%
   # Change outcome_id to ensure match with codebook
