Replaced "crf" with "rr"

--- a/r_package/testing/Performance/2023-12-13 Compare ARE method with new method/PER new method assess_mortality_lifetable().Rmd
+++ b/r_package/testing/Performance/2023-12-13 Compare ARE method with new method/PER new method assess_mortality_lifetable().Rmd
@@ -18,10 +18,10 @@ library(profvis)
 # 
 #     exp = input_data_mortality$exp[2], # PM2.5=8.30=limit LRV CH, NO2=16.32=mean conc. in CH in 2019
 #     cutoff = input_data_mortality$cutoff[2],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
-#     crf = unlist(input_data_mortality[2,
-#                                       c("crf_mean", "crf_lowci", "crf_highci")]),
+#     rr = unlist(input_data_mortality[2,
+#                                       c("rr_mean", "rr_lowci", "rr_highci")]),
 #     rr_increment = 10, 
-#     crf_rescale_method = "loglinear",
+#     rr_rescale_method = "loglinear",
 #     first_age_pop = 0,
 #     last_age_pop = 99,
 #     interval_age_pop = 1,
